; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_fast_forward_client.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_fast_forward_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }

@gdns_thread = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@glog = common dso_local global i32 0, align 4
@holder = common dso_local global i32 0, align 4
@gwswriter = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @fast_forward_client to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fast_forward_client(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = call i32 @pthread_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gdns_thread, i32 0, i32 0))
  %5 = load i32, i32* @glog, align 4
  %6 = load i32, i32* @holder, align 4
  %7 = call i8* @get_json(i32 %5, i32 %6, i32 0)
  store i8* %7, i8** %3, align 8
  %8 = call i32 @pthread_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gdns_thread, i32 0, i32 0))
  %9 = load i8*, i8** %3, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %29

12:                                               ; preds = %1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gwswriter, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = call i32 @pthread_mutex_lock(i32* %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gwswriter, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %2, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @strlen(i8* %21)
  %23 = call i32 @send_holder_to_client(i32 %18, i32 %19, i8* %20, i32 %22)
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gwswriter, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = call i32 @pthread_mutex_unlock(i32* %25)
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @free(i8* %27)
  br label %29

29:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i8* @get_json(i32, i32, i32) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @send_holder_to_client(i32, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
